     * The $readline variable can be used to display the currently
       selected readline implementation.
* Added new options to the \insert command:
     * -t,--terminator=term  Allows you to specify a batch terminator
       other than "go".
     * -m,--multi-row Enables support for platforms that allow multiple
       rows to be specified in a single insert statement.
* Added ${binstr_fmt}, a boolean variable, that controls whether or 
  not binary values are displayed as raw binary values (false=0xabcd) 
  or as binary string values (true=X'abcd').
* Added ${exec_mode} variable that can change the manner in which 
  jsqsh executes SQL against the remote server. This can be one of
  "immediate" (the default) or "prepare".
* Added driver name 'db2zos'. This is identical to the "db2" driver
  except that it sets the "emulateParameterMetaDataForZCalls" property
  and sets the execution mode to "prepare" upon connection (DB2 z/OS
  can execute "call procname()" calls if the SQL is prepared first).
* Added <SessionVariable> property in the drivers.xml that allows a 
  driver to set certain session variable values upon connection.
* Added --show-password option to "\connect --list" because I keep
  forgetting passwords to systems.
* Added sql-skin driver definition for the IBM DB2 SQL Skin for ASE
  driver (I happen to work for them, so have a bit of incentive).
* More care is taken to ensure that database connections are actually
  formally close()'d when jsqsh exits or a session terminates.
* When in non-interactive mode, the warning about failures to load the
  jsqsh JNI interface is suppressed.

Release 1.3
* The 'dist-rpm' target and has been updated so that it works on 
  more recent RPM distributions (specifically I am running FC10).
* Compilation requires JDK 1.6 now due to support for new datatypes. It
  should run OK in JDK 1.5 provided you don't reference one of those
  datatypes.
* A driver definition (the drivers.xml) file may now contain a new